; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ngatm/netnatm/msg/extr_uni_ie.c_uni_print.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ngatm/netnatm/msg/extr_uni_ie.c_uni_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uni_all = type { i32 }
%struct.unicx = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uni_print(i8* %0, i64 %1, %struct.uni_all* %2, %struct.unicx* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.uni_all*, align 8
  %8 = alloca %struct.unicx*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.uni_all* %2, %struct.uni_all** %7, align 8
  store %struct.unicx* %3, %struct.unicx** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load %struct.unicx*, %struct.unicx** %8, align 8
  %12 = call i32 @uni_print_init(i8* %9, i64 %10, %struct.unicx* %11)
  %13 = load %struct.uni_all*, %struct.uni_all** %7, align 8
  %14 = load %struct.unicx*, %struct.unicx** %8, align 8
  %15 = call i32 @uni_print_internal(%struct.uni_all* %13, %struct.unicx* %14)
  ret void
}

declare dso_local i32 @uni_print_init(i8*, i64, %struct.unicx*) #1

declare dso_local i32 @uni_print_internal(%struct.uni_all*, %struct.unicx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
